<resources>

    <string name="app_name">Devil Reader</string>

    <string name="drawer_discover">Discover</string>
    <string name="drawer_news">News</string>
    <string name="drawer_roster">Roster</string>
    <string name="drawer_schedule">Schedule</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sign_in">Sign In</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="drawer_not_signed_in">Not signed in</string>

    <string name="drawer_user_avatar">User Avatar</string>

    <string name="action_settings">Settings</string>
    <string name="action_news_filter">Filter</string>
    <string name="action_news_sources">Sources</string>
    <string name="action_story_save">Save</string>
    <string name="action_story_unsave">Unsave</string>
    <string name="action_story_browser">Open link</string>
    <string name="action_story_share">Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_widget_headlines">Dreader Headlines</string>

    <string name="content_authority">com.example.dreader.devilreader</string>
    <string name="sync_account_type">com.example.dreader.devilreader.SYNC_ACCOUNT_TYPE</string>

    <string name="typeface_arvo_normal">fonts/arvo.ttf</string>
    <string name="typeface_arvo_bold">fonts/arvo_bold.ttf</string>

    <string name="widget_title">DEVILS HEADLINES</string>
    <string name="notification_message">Puckdrop in 5 minutes</string>
    <string name="share_message">Share link using</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- DiscoverFragment -->

    <string name="discover_subtitle_headlines">Latest Headlines</string>
    <string name="discover_subtitle_outlook">Playoff Outlook</string>
    <string name="discover_label_last_game">Last Game</string>
    <string name="discover_label_next_game">Next Game</string>

    <!-- NewsFragment -->

    <string name="story_thumbnail_desc">Thumbnail</string>
    <string name="story_attachment_desc">Attached Image</string>

    <string name="story_thumbnail_placeholder">
        http://www.prucenter.com/partner-resources/devils/NJ_Devils_Logo.250x250.png
    </string>

    <string name="story_saved">Saved</string>
    <string name="story_unsaved">Unsaved</string>

    <string-array name="settings_news_filters">
        <item>Show All</item>
        <item>Saved</item>
        <item>Unread</item>
    </string-array>

    <string name="story_label_tags">Tagged Players</string>
    <string name="story_marked_read">Marked as read</string>

    <!-- Player -->

    <string name="player_status_captain">Captain</string>
    <string name="player_status_assistant">Assistant Captain</string>

    <string name="player_label_age">Age</string>
    <string name="player_label_drafted">Drafted</string>
    <string name="player_label_draft_round">Round</string>
    <string name="player_label_draft_pos">Overall</string>

    <string name="player_undrafted">Undrafted</string>
    <string name="player_pos_goaltender">GOALTENDER | Catches</string>
    <string name="player_pos_center">CENTER | Shoots</string>
    <string name="player_pos_left">LEFT WING | Shoots</string>
    <string name="player_pos_right">RIGHT WING | Shoots</string>
    <string name="player_pos_defense">DEFENSE | Shoots</string>
    <string name="player_hand_right">RIGHT</string>
    <string name="player_hand_left">LEFT</string>
    <string name="player_mugshot_desc">Player Mugshot</string>

    <string name="player_contract_nomove">No Movement Clause</string>
    <string name="player_contract_notrade">No Trade Clause</string>
    <string name="player_contract_type_standard">Standard Player Contract</string>
    <string name="player_contract_type_entry_level">Entry Level Contract</string>
    <string name="player_contract_type_historic">Historic</string>
    <string name="player_contract_type_na">N/A</string>

    <string name="player_contract_label_type">Type</string>
    <string name="player_contract_label_expiry">Expiry</string>
    <string name="player_contract_label_value">Value</string>
    <string name="player_contract_label_caphit">Cap Hit</string>
    <string name="player_contract_label_unrestricted">Unrestricted</string>
    <string name="player_contract_label_restricted">Restricted</string>
    <string name="player_contract_label_signing">Signing Bonus</string>
    <string name="player_contract_label_performance">Performance Bonus</string>
    <string name="player_contract_label_season">Season</string>
    <string name="player_contract_label_slary_nhl">NHL Salary</string>
    <string name="player_contract_label_slary_ahl">AHL Salary</string>

    <string name="roster_salary_season_1617">2016-17</string>
    <string name="roster_salary_season_1718">2017-18</string>
    <string name="roster_salary_season_1819">2018-19</string>
    <string name="roster_salary_season_1920">2019-20</string>
    <string name="roster_salary_season_2021">2020-21</string>
    <string name="roster_salary_season_2122">2021-22</string>
    <string name="roster_salary_season_2223">2022-23</string>
    <string name="roster_salary_season_2324">2023-24</string>

    <string name="player_contract_icon_desc">Contract</string>
    <string name="player_contract_button_more">More info for %s</string>
    <string name="player_contract_button_less">Less info for %s</string>

    <string name="player_backdrop_desc">Player Backdrop Image</string>

    <string name="player_backdrop_root">https://nhl.bamcontent.com/images/actionshots/</string>
    <string name="player_mugshot_root">https://nhl.bamcontent.com/images/headshots/current/168x168/</string>
    <string name="player_mugshot_transition">com.example.dreader.devilreader.MUGSHOT_TRANSITION</string>

    <string name="roster_label_forwards">Forwards</string>
    <string name="roster_label_defensemen">Defensemen</string>
    <string name="roster_label_goaltenders">Goaltenders</string>
    <string name="roster_label_injured">Injury Reserve</string>
    <string name="roster_label_nonroster">Non-Roster</string>

    <!-- GameActivity -->

    <string name="game_scoring_final">FINAL</string>
    <string name="game_label_recap">RECAP</string>
    <string name="game_label_stats">STATS</string>
    <string name="game_label_goals">GOALS</string>
    <string name="game_stats_shots">SHOTS</string>
    <string name="game_stats_faceoffs">FACEOFFS</string>
    <string name="game_stats_powerplay">POWERPLAY</string>
    <string name="game_stats_pim">PENALTY MINUTES</string>
    <string name="game_stats_hits">HITS</string>
    <string name="game_stats_blocks">BLOCKS</string>
    <string name="game_button_play">Play Video</string>

    <string name="game_home_desc">Home Team</string>
    <string name="game_away_desc">Away Team</string>
    <string name="game_opponent_desc">Opponent</string>

    <!-- Google Authentication -->

    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sign_out">Sign Out</string>
    <string name="auth_signed_in_fmt">Signed in as %s</string>
    <string name="auth_signed_out">Signed out successfully</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auth_loading">Loading…</string>
    <string name="auth_not_signed_in">Not signed in</string>

    <!-- SharedPreferences -->

    <string name="pref_header_general">General Settings</string>
    <string name="pref_header_sources">News Sources</string>

    <!-- Keys -->
    <string name="pref_general_puckdrop_notification">pref_general_puckdrop_notification</string>
    <string name="pref_general_start_screen">pref_general_start_screen</string>
    <string name="pref_general_open_link_method">pref_general_open_link_method</string>
    <string name="pref_sources_nhl">pref_sources_nhl</string>
    <string name="pref_sources_tsn">pref_sources_tsn</string>
    <string name="pref_sources_fib">pref_sources_fib</string>
    <string name="pref_sources_yt">pref_sources_yt</string>
    <string name="pref_sources_ppf">pref_sources_ppf</string>
    <string name="pref_sources_had">pref_sources_had</string>

    <string name="pref_title_puckdrop_notification">Puck drop notification</string>

    <string name="pref_description_puckdrop_notification">
        Receive a notification when a game is about to start
    </string>

    <string name="pref_title_open_link_method">Open external links method</string>

    <string-array name="pref_titles_open_link_method">
        <item>Web Browser</item>
        <item>Chrome Tab</item>
    </string-array>

    <string-array name="pref_values_open_link_method">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_start_screen">Default Start Screen</string>

    <string-array name="pref_titles_start_screen">
        <item>Discover</item>
        <item>News</item>
    </string-array>

    <string-array name="pref_values_start_screen">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_sources_nhl">NHL</string>
    <string name="pref_description_sources_nhl">nhl.com/devils</string>

    <string name="pref_title_sources_tsn">TSN</string>
    <string name="pref_description_sources_tsn">tsn.ca/nhl/team/new-jersey-devils</string>

    <string name="pref_title_sources_fib">Fire \&amp; Ice Blog</string>
    <string name="pref_description_sources_fib">northjersey.com/blog/fireandice</string>

    <string name="pref_title_sources_yt">Youtube</string>
    <string name="pref_description_sources_yt">youtube.com/NJDevilsOfficial</string>

    <string name="pref_title_sources_ppf">Pucks and Pitchforks</string>
    <string name="pref_description_sources_ppf">pucksandpitchforks.com</string>

    <string name="pref_title_sources_had">Have Another Doughnut Podcast</string>
    <string name="pref_description_sources_had">hadpodcast.podomatic.com</string>

    <string-array name="pref_titles_sources">
        <item>@string/pref_title_sources_nhl</item>
        <item>@string/pref_title_sources_tsn</item>
        <item>@string/pref_title_sources_fib</item>
        <item>@string/pref_title_sources_yt</item>
        <item>@string/pref_title_sources_ppf</item>
        <item>@string/pref_title_sources_had</item>
    </string-array>

</resources>
