<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#000000">

    <TextView
        android:text="@string/roster_salary_season_1617"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_1718"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_1819"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_1920"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_2021"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_2122"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_2223"
        style="@style/roster_salary_heading" />

    <TextView
        android:text="@string/roster_salary_season_2324"
        style="@style/roster_salary_heading" />

</LinearLayout>