<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_story_save"
        android:icon="@drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_story_share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always"  />

    <item
        android:id="@+id/action_browser"
        android:orderInCategory="102"
        android:title="@string/action_story_browser"
        android:icon="@drawable/ic_menu_open_external"
        app:showAsAction="ifRoom" />

</menu>
