<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_news" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />

    </group>

    <item android:title="@string/app_name">

        <menu>

            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/drawer_settings" />

        </menu>

    </item>

</menu>
